crates/nirvash-macros/tests/fixtures/code_tests_legacy_probe.stderr
error: probe = ... is no longer supported; use binding = ... and implement ProtocolRuntimeBinding<Spec>
   --> tests/fixtures/code_tests_legacy_probe.rs:131:46
    |
131 | #[code_tests(spec = Spec, binding = Binding, probe = tests::Probe)]
    |                                              ^^^^^
